// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error 1`] = `
<View>
  <Text>
    An error occurred
  </Text>
  <Text>
    {
  "message": "An example error."
}
  </Text>
</View>
`;

exports[`2. a full article with an image as the lead asset 1`] = `
<RCTScrollView
  initialNumToRender={10}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  scrollEventThrottle={50}
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <View>
    <View>
      <View>
        <ModalImage
          aspectRatio={1.7777777777777777}
          caption="Some Caption"
          credits="Some Credits"
          uri="https://crop169.io"
        />
      </View>
    </View>
    <View>
      <View>
        <View>
          <ArticleLabel
            color="#333333"
            title="Some Label"
          />
        </View>
        <Text>
          Some Headline
        </Text>
        <Text
          accessibilityRole="heading"
          aria-level="2"
        >
          Some Standfirst
        </Text>
        <View>
          <View>
            <NewArticleFlag />
          </View>
        </View>
      </View>
    </View>
    <View>
      <View>
        <View>
          <Text>
            <ArticleBylineWithLinks
              ast={
                Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Some byline",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "inline",
                  },
                ]
              }
              color="#333333"
            />
          </Text>
        </View>
        <View>
          <Text>
            Friday March 13 2015, 06:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View>
        <ArticleImage
          captionOptions={
            Object {
              "caption": "An image caption",
              "credits": "The image credits",
            }
          }
          imageOptions={
            Object {
              "display": "primary",
              "ratio": "1500:1000",
              "url": "https://image.io",
            }
          }
        />
      </View>
    </View>
    <View>
      <Text
        accessibilityRole="link"
      >
        Some Link
      </Text>
    </View>
    <View>
      <View>
        <Text>
          Some content
        </Text>
      </View>
    </View>
    <View>
      <View>
        <PullQuote
          caption="AName"
          content="A pull quote"
          twitter="@AName"
        />
      </View>
    </View>
    <View>
      <View>
        <Video
          accountId="57838016001"
          height={421.875}
          policyKey="1.2.3.4"
          poster={
            Object {
              "uri": "https://image.io",
            }
          }
          videoId="4084164751001"
          width={750}
        />
        <View>
          <View>
            <Text>
              This is video caption
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View>
      <View>
        <ArticleTopics
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </View>
    </View>
    <View>
      <RelatedArticles
        articles={
          Array [
            Object {
              "__typename": "Article",
              "byline": Array [],
              "headline": "RA Headline",
              "id": "ra-1",
              "label": "RA Label",
              "leadAsset": Object {
                "__typename": "Image",
                "crop169": Object {
                  "__typename": "Crop",
                  "url": "https://racrop169.io",
                },
                "crop32": Object {
                  "__typename": "Crop",
                  "url": "https://racrop32.io",
                },
                "title": "RA Title",
              },
              "publicationName": "TIMES",
              "publishedTime": "2015-03-23T19:39:39.000Z",
              "summary105": Array [],
              "summary125": Array [],
              "summary145": Array [],
              "summary160": Array [],
              "summary175": Array [],
              "summary225": Array [],
              "url": "https://ra.io",
            },
          ]
        }
        template="DEFAULT"
      />
    </View>
    <View />
  </View>
</RCTScrollView>
`;

exports[`3. an article with a video as the lead asset 1`] = `
<RCTScrollView
  initialNumToRender={10}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  scrollEventThrottle={50}
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <View>
    <View>
      <View>
        <Video
          accountId="57838016001"
          height={421.875}
          policyKey="1.2.3.4"
          poster={
            Object {
              "uri": "https://video.io",
            }
          }
          videoId="4084164751001"
          width={750}
        />
      </View>
    </View>
    <View>
      <View>
        <View>
          <VideoLabel
            color="#333333"
            title={null}
          />
        </View>
        <Text>
          Some Headline
        </Text>
      </View>
    </View>
    <View>
      <View>
        <View>
          <Text>
            Friday March 13 2015, 06:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View>
        <Text>
          Some content
        </Text>
      </View>
    </View>
    <View />
    <View>
      <ArticleComments
        articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
        commentCount={65}
        commentsEnabled={true}
        url="https://url.io"
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`4. an article with no lead asset 1`] = `
<RCTScrollView
  initialNumToRender={10}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  scrollEventThrottle={50}
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <View>
    <View>
      <View>
        <Text>
          Some Headline
        </Text>
      </View>
    </View>
    <View>
      <View>
        <View>
          <Text>
            Friday March 13 2015, 06:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View>
        <Text>
          Some content
        </Text>
      </View>
    </View>
    <View />
    <View>
      <ArticleComments
        articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
        commentCount={65}
        commentsEnabled={true}
        url="https://url.io"
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`5. an article with ads 1`] = `
<RCTScrollView
  initialNumToRender={10}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  scrollEventThrottle={50}
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <View>
    <View>
      <View>
        <Text>
          Some Headline
        </Text>
      </View>
    </View>
    <View>
      <View>
        <View>
          <Text>
            Friday March 13 2015, 06:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <Ad
        contextUrl="https://url.io"
        section="Some Section"
        slotName="native-inline-ad"
      />
    </View>
    <View />
    <View>
      <ArticleComments
        articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
        commentCount={65}
        commentsEnabled={true}
        url="https://url.io"
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`6. a secondary image 1`] = `
<RCTScrollView
  initialNumToRender={10}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  scrollEventThrottle={50}
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <View>
    <View>
      <View>
        <Text>
          Some Headline
        </Text>
      </View>
    </View>
    <View>
      <View>
        <View>
          <Text>
            Friday March 13 2015, 06:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View>
        <ArticleImage
          captionOptions={
            Object {
              "caption": "A Caption",
              "credits": "Some Credits",
            }
          }
          imageOptions={
            Object {
              "display": "secondary",
              "ratio": "3:2",
              "url": "https://image-2.io",
            }
          }
        />
      </View>
    </View>
    <View />
    <View>
      <ArticleComments
        articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
        commentCount={65}
        commentsEnabled={true}
        url="https://url.io"
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`7. an inline image 1`] = `
<RCTScrollView
  initialNumToRender={10}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  scrollEventThrottle={50}
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <View>
    <View>
      <View>
        <Text>
          Some Headline
        </Text>
      </View>
    </View>
    <View>
      <View>
        <View>
          <Text>
            Friday March 13 2015, 06:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View>
        <ArticleImage
          captionOptions={
            Object {
              "caption": "A Caption",
              "credits": "Some Credits",
            }
          }
          imageOptions={
            Object {
              "display": "inline",
              "ratio": "9:4",
              "url": "https://image-inline.io",
            }
          }
        />
      </View>
    </View>
    <View />
    <View>
      <ArticleComments
        articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
        commentCount={65}
        commentsEnabled={true}
        url="https://url.io"
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`8. an article loading state 1`] = `
<View>
  <ActivityIndicator
    animating={true}
    hidesWhenStopped={true}
    size="large"
  />
</View>
`;

exports[`9. an article with updated byline 1`] = `
<RCTScrollView
  initialNumToRender={10}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  scrollEventThrottle={50}
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <View>
    <View>
      <View>
        <Text>
          Some Headline
        </Text>
      </View>
    </View>
    <View>
      <View>
        <View>
          <Text>
            Friday March 13 2015, 06:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View>
        <Text>
          Some content
        </Text>
      </View>
    </View>
    <View />
    <View>
      <ArticleComments
        articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
        commentCount={65}
        commentsEnabled={true}
        url="https://url.io"
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`9. an article with updated byline 2`] = `
<RCTScrollView
  initialNumToRender={10}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  scrollEventThrottle={50}
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <View>
    <View>
      <View>
        <Text>
          Some Headline
        </Text>
      </View>
    </View>
    <View>
      <View>
        <View>
          <Text>
            <ArticleBylineWithLinks
              ast={
                Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Some byline",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "inline",
                  },
                ]
              }
              color="#FFFFFF"
            />
          </Text>
        </View>
        <View>
          <Text>
            Friday March 13 2015, 06:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View>
        <Text>
          Some content
        </Text>
      </View>
    </View>
    <View />
    <View>
      <ArticleComments
        articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
        commentCount={65}
        commentsEnabled={true}
        url="https://url.io"
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`10. an article that moves to a loading state 1`] = `
<RCTScrollView
  initialNumToRender={10}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  scrollEventThrottle={50}
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <View>
    <View>
      <View>
        <Text>
          Some Headline
        </Text>
      </View>
    </View>
    <View>
      <View>
        <View>
          <Text>
            Friday March 13 2015, 06:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View>
        <Text>
          Some content
        </Text>
      </View>
    </View>
    <View />
    <View>
      <ArticleComments
        articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
        commentCount={65}
        commentsEnabled={true}
        url="https://url.io"
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`10. an article that moves to a loading state 2`] = `
<View>
  <ActivityIndicator
    animating={true}
    hidesWhenStopped={true}
    size="large"
  />
</View>
`;
